<resources>
    <string name="app_name">Lab08</string>
    <string name="url">URL</string>
    <string name="phone_number">Phone Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address_line_2">Address line 2</string>
    <string name="address_line_1">Address line 1</string>
</resources>
